--- a/Demo/MainWindow.xaml
+++ b/Demo/MainWindow.xaml
@@ -4,20 +4,22 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Demo"
+        xmlns:wpf="clr-namespace:EasyCaptcha.Wpf;assembly=EasyCaptcha.Wpf"
         mc:Ignorable="d"
        Title="Авторизация" Height="350" Width="400" FontFamily="Comic Sans MS">
     <Grid Background="#FFFFFF">
         <Grid.RowDefinitions>
             <RowDefinition Height="100"/>
             <RowDefinition Height="30"/>
+            <RowDefinition x:Name="UserNameForm" Height="50"/>
+            <RowDefinition x:Name="UserPasswordForm" Height="50"/>
+            <RowDefinition Height="50" />
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0" Content="Авторизация" FontSize="30" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-        <Label Grid.Row="1" Content="Пожалуйста, введите свои данные для входа или продолжайте в качестве гостя" FontSize="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Label Grid.Row="1" x:Name="NavigateText" Content="Пожалуйста, введите свои данные для входа или продолжайте в качестве гостя" FontSize="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
         <StackPanel Grid.Row="2"  HorizontalAlignment="Center" Orientation="Horizontal" Margin="0,10">
             <Label Content="Username:" Margin="0,0,10,0" VerticalAlignment="Center"/>
@@ -29,14 +31,19 @@
             <PasswordBox x:Name="PasswordBoxEnter" Width="200"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10">
+        <StackPanel x:Name="StackPanelButtonEnter" Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10">
             <Button Content="Login" Width="100" Height="30" Background="#76E383" Click="Button_Click"/>
             <Button Content="Guest Login" Width="100" Height="30" Margin="10,0,0,0" Background="#498C51" Click="Button_Click_1"/>
         </StackPanel>
 
-        <TextBlock Grid.Row="5" VerticalAlignment="Center" TextAlignment="Center">
+        <TextBlock Grid.Row="5" VerticalAlignment="Top" TextAlignment="Center">
             <Label Content="Нет аккаунта?" FontSize="10"></Label>
             <Button Content="Зарегистрироваться" FontSize="10" Background="#498C51"></Button>
         </TextBlock>
+        <UniformGrid Name="UniformGridCaptcha" Grid.Row="4" Grid.ColumnSpan="3" Columns="3">
+            <wpf:Captcha Width="130" x:Name="MyCaptcha" />
+            <TextBox Width="100" Name="TextBoxCaptcha" />
+            <Button Name="ButtonAcceptCaptcha" Click="ButtonAcceptCaptcha_Click">⊕</Button>
+        </UniformGrid>
     </Grid>
 </Window>
